--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 <body>
   <h1>Odin Recipes</h1>
+  <ul>
+    <li><a href="./recipes/pizza.html">Pizza</a></li>
+    <li><a href="./recipes/fried-rice.html">Fried Rice</a></li>
+    <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
+  </ul>
 </body>
 
 </html>
