--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Fried Rice</h1>
   <img src="../img/fried-rice.webp" width="350">
-  <h2>Description</h2>
+  <h2>Fried rice</h2>
   <p>
     Well, we can't eat pizza every day - Believe me, I've tried. When you feel you're ready for something that's a
     little healthier,but still easy to make, fried rice is the way to go.
